force-app/main/default/objects/Client_Program_Note__c/Client_Program_Note__c.object-meta.xml
<CustomObject>
    <label>Client Program Note</label>
    <nameField>
        <displayFormat>CPN-{000000}</displayFormat>
        <label>Client Program Note</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Program Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>