force-app/main/default/objects/Client_Program_Note__c/fields/Notes_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Notes_Field_1__c</fullName>
    <label>Notes Field 1 (Long Text)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>